[project]
name = "contentsharing-app"
version = "0.1.0"
description = "An interactive platform to share media content with people"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "imagekitio>=4.2.0",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.2.1",
    "scenedetect>=0.6.7.1",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]
